2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* build-aux/urbi-dirs.m4 (_URBI_DIRS): New.
	(URBI_DIRS): Use it.
	(URBI_KERNEL_DIRS): New.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* build-aux/urbi-dirs.m4: Pass the default urbi env.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* build-aux/urbi-dirs.m4: Quote properly.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	Various.

	* sdk/Makefile.module.in: Rename as...
	* sdk/module.mk.in: this.
	* sdk/Makefile.param.in: Rename as...
	* sdk/param.mk.in: this.

	* build-aux/urbi-dirs.m4: Extensive changes for the new layout.
	* sdk/Makefile.am: Update to the new dir names.
	* src/liburbi/Makefile.am: Likewise.
	* src/liburbi/uobject/uexternal.h: Formatting changes.

	First stab, based on texi2dvi.
	* umake: New.
	* umake/umake.in: New.
	* configure.ac: Configure it.

2006-09-26  matthieu nottale  <nottale@gostai.com>

	Hash_map stuff

	* src/liburbi/Makefile.am: Add uext.h.
	* src/liburbi/uobject/uobject.template.h: Remove hash_map code moved to uext.h.
	* src/liburbi/uobject/uext.h: Handle special case of hash_map with char * keys.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* src/liburbi/Makefile.am: Use the pthread vars correctly.
	* src/liburbi/uobject/Makefile.am: Likewise.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* src/examples/urbitalkie.cpp: Formatting changes.
	* src/liburbi/uobject/uexternal.h: Comment changes.
	* src/liburbi/Makefile.am (AM_LDFLAGS): Remove, useless.
	* src/liburbi/uobject/Makefile.am: Install back libuobject.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* build-aux/urbi-openr.m4: Fix.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* sdk/Makefile.am: Remove dead code.
	Formatting changes.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* build-aux/urbi-openr.m4: New.
	* configure.ac: Use it.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* src/examples/urbitalkie.cpp: Use urbi::.