@@ -1,3 +1,8 @@
+2006-09-26  Akim Demaille  <akim.demaille@free.fr>
+
+	Fixes.
+	* src/liburbi/uobject/uext.h: Add a missing "public".
+
 2006-09-26  Akim Demaille  <akim@lrde.epita.fr>
 
 	* build-aux/urbi-dirs.m4 (_URBI_DIRS): New.
